[tool.poetry]
name = "pypackage-template-fork"
version = "0.1.0"
description = "A template for generating a Python package"
authors = [
    "Bruno Alla <alla.brunoo@gmail.com>",
    "34j <34j.95a2p@simplelogin.com>",
]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.group.dev.dependencies]
copier = "^7.0"
pytest = "^7.0"
pytest-mock = "^3.3"

[tool.isort]
profile = "black"
known_first_party = ["{{package_name}}", "hooks", "tests"]

[tool.pytest.ini_options]
addopts = "-v -Wdefault"
testpaths = "tests/"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
