[tool.poetry]
name = "pypackage-template-fork"
version = "0.1.0"
description = "A template for generating a Python package"
authors = [
    "Bruno Alla <alla.brunoo@gmail.com>",
    "34j <34j.95a2p@simplelogin.com>",
]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
jinja2-time = "^0.2.0"
jinja2-env = "^0.1.1"
jinja2-shell = "^0.1.2"

[tool.poetry.group.dev.dependencies]
copier = "^7.0"
pytest = "^7.0"
pytest-mock = "^3.3"
pre-commit = "^3.1.1"

[tool.isort]
profile = "black"
known_first_party = ["{{package_name}}", "hooks", "tests"]

[tool.pytest.ini_options]
addopts = "-v -Wdefault"
testpaths = "tests/"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
